--- a/style/post-deital.css
+++ b/style/post-deital.css
@@ -1,4 +1,5 @@
 @import url(/style/section/hero.css);
+@import url(/style/section/post-detail-section.css);
 
 header .nav li:last-child {
 	display: block !important;
