--- a/style/home-page.css
+++ b/style/home-page.css
@@ -1,9 +1,27 @@
+@import url(/style/section/modal-delete.css);
 header .nav li {
 	display: none;
 }
 
 header .nav li:first-child {
 	display: block !important;
+}
+
+.carousel-section {
+	padding-top: 4rem;
+}
+
+.carousel-section .img {
+	position: relative;
+	height: 40rem;
+	overflow: hidden;
+}
+
+.carousel-section .img img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
 .lastest-post {
@@ -40,14 +58,32 @@ header .nav li:first-child {
 
 .card {
 	position: relative;
-	transition: 0.5s all;
+
 	cursor: pointer;
+	transition: 0.5s all;
 	margin-bottom: 3rem;
+	text-align: left;
+
+	transform: scale(1);
+
+	animation: initScale;
+	animation-duration: 0.5s;
+	animation-fill-mode: backwards;
+}
+
+@keyframes initScale {
+	0% {
+		transform: scale(0.5);
+	}
+	100% {
+		transform: scale(1);
+	}
 }
 
 .card .card__img {
 	position: relative;
 	height: 32rem;
+	overflow: hidden;
 }
 
 @media only screen and (min-width: 768px) {
@@ -64,6 +100,7 @@ header .nav li:first-child {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	transition: 0.3s all;
 }
 
 .card .card__dsc {
@@ -118,6 +155,10 @@ header .nav li:first-child {
 	box-shadow: 1px -1px 18px -6px rgba(0, 0, 0, 0.77);
 	-webkit-box-shadow: 1px -1px 18px -6px rgba(0, 0, 0, 0.77);
 	-moz-box-shadow: 1px -1px 18px -6px rgba(0, 0, 0, 0.77);
+}
+
+.card:hover .card__img img {
+	transform: scale(1.2);
 }
 
 .card:hover .card__icon {
