--- a/style/add-edit-post.css
+++ b/style/add-edit-post.css
@@ -1,5 +1,6 @@
 @import url(/style/section/hero.css);
 @import url(/style/section/post-detail-section.css);
+@import url(/style/section/loading.css);
 
 #postForm {
 }
